--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1099,6 +1099,9 @@ select {
 .z-50 {
 	z-index: 50;
 }
+.z-10 {
+	z-index: 10;
+}
 .col-span-6 {
 	grid-column: span 6 / span 6;
 }
@@ -1111,6 +1114,12 @@ select {
 .m-1 {
 	margin: 0.25rem;
 }
+.m-auto {
+	margin: auto;
+}
+.m-0 {
+	margin: 0px;
+}
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
@@ -1118,6 +1127,10 @@ select {
 .my-2 {
 	margin-top: 0.5rem;
 	margin-bottom: 0.5rem;
+}
+.mx-2 {
+	margin-left: 0.5rem;
+	margin-right: 0.5rem;
 }
 .ml-3 {
 	margin-left: 0.75rem;
@@ -1188,8 +1201,26 @@ select {
 .mb-4 {
 	margin-bottom: 1rem;
 }
+.-mb-1 {
+	margin-bottom: -0.25rem;
+}
+.mb-3 {
+	margin-bottom: 0.75rem;
+}
 .-mt-px {
 	margin-top: -1px;
+}
+.mt-0 {
+	margin-top: 0px;
+}
+.mb-\[3px\] {
+	margin-bottom: 3px;
+}
+.ml-0 {
+	margin-left: 0px;
+}
+.mr-px {
+	margin-right: 1px;
 }
 .block {
 	display: block;
@@ -1245,6 +1276,9 @@ select {
 .max-h-20 {
 	max-height: 5rem;
 }
+.max-h-10 {
+	max-height: 2.5rem;
+}
 .min-h-screen {
 	min-height: 100vh;
 }
@@ -1290,11 +1324,11 @@ select {
 .w-20 {
 	width: 5rem;
 }
-.w-screen {
-	width: 100vw;
-}
 .w-1\/2 {
 	width: 50%;
+}
+.w-64 {
+	width: 16rem;
 }
 .min-w-0 {
 	min-width: 0px;
@@ -1356,6 +1390,12 @@ select {
 .cursor-pointer {
 	cursor: pointer;
 }
+.select-none {
+	-webkit-user-select: none;
+	   -moz-user-select: none;
+	    -ms-user-select: none;
+	        user-select: none;
+}
 .list-inside {
 	list-style-position: inside;
 }
@@ -1367,6 +1407,9 @@ select {
 }
 .grid-cols-1 {
 	grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.flex-row {
+	flex-direction: row;
 }
 .flex-col {
 	flex-direction: column;
@@ -1423,9 +1466,6 @@ select {
 }
 .overflow-y-hidden {
 	overflow-y: hidden;
-}
-.overflow-x-scroll {
-	overflow-x: scroll;
 }
 .truncate {
 	overflow: hidden;
@@ -1565,6 +1605,14 @@ select {
 .bg-gray-300 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+}
+.bg-gray-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+}
+.bg-blue-200 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
@@ -1725,11 +1773,18 @@ select {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
 }
+.text-7xl {
+	font-size: 4.5rem;
+	line-height: 1;
+}
 .font-medium {
 	font-weight: 500;
 }
 .font-semibold {
 	font-weight: 600;
+}
+.font-bold {
+	font-weight: 700;
 }
 .uppercase {
 	text-transform: uppercase;
@@ -1819,6 +1874,10 @@ select {
 .text-gray-300 {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
+}
+.text-black {
+	--tw-text-opacity: 1;
+	color: rgba(0, 0, 0, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
@@ -1938,6 +1997,10 @@ select {
 .hover\:bg-gray-50:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+}
+.hover\:bg-gray-300:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
 }
 .hover\:text-gray-500:hover {
 	--tw-text-opacity: 1;
@@ -2148,10 +2211,6 @@ select {
 
 	.sm\:w-full {
 		width: 100%;
-	}
-
-	.sm\:min-w-full {
-		min-width: 100%;
 	}
 
 	.sm\:max-w-md {
