--- a/public/css/app.css
+++ b/public/css/app.css
@@ -765,6 +765,39 @@ select {
 [type='file']:focus {
 	outline: 1px auto -webkit-focus-ring-color;
 }
+.container {
+	width: 100%;
+}
+@media (min-width: 640px) {
+
+	.container {
+		max-width: 640px;
+	}
+}
+@media (min-width: 768px) {
+
+	.container {
+		max-width: 768px;
+	}
+}
+@media (min-width: 1024px) {
+
+	.container {
+		max-width: 1024px;
+	}
+}
+@media (min-width: 1280px) {
+
+	.container {
+		max-width: 1280px;
+	}
+}
+@media (min-width: 1536px) {
+
+	.container {
+		max-width: 1536px;
+	}
+}
 .prose {
 	color: #374151;
 	max-width: 65ch;
@@ -1201,14 +1234,17 @@ select {
 .mb-4 {
 	margin-bottom: 1rem;
 }
+.mb-5 {
+	margin-bottom: 1.25rem;
+}
+.mb-0 {
+	margin-bottom: 0px;
+}
+.ml-auto {
+	margin-left: auto;
+}
 .-mb-1 {
 	margin-bottom: -0.25rem;
-}
-.mb-3 {
-	margin-bottom: 0.75rem;
-}
-.-mt-px {
-	margin-top: -1px;
 }
 .mt-0 {
 	margin-top: 0px;
@@ -1221,6 +1257,12 @@ select {
 }
 .mr-px {
 	margin-right: 1px;
+}
+.mb-3 {
+	margin-bottom: 0.75rem;
+}
+.-mt-px {
+	margin-top: -1px;
 }
 .block {
 	display: block;
@@ -1273,6 +1315,9 @@ select {
 .h-2 {
 	height: 0.5rem;
 }
+.h-1 {
+	height: 0.25rem;
+}
 .max-h-20 {
 	max-height: 5rem;
 }
@@ -1324,11 +1369,11 @@ select {
 .w-20 {
 	width: 5rem;
 }
-.w-1\/2 {
-	width: 50%;
-}
 .w-64 {
 	width: 16rem;
+}
+.w-1\/2 {
+	width: 50%;
 }
 .min-w-0 {
 	min-width: 0px;
@@ -1506,6 +1551,10 @@ select {
 	border-bottom-right-radius: 0px;
 	border-bottom-left-radius: 0px;
 }
+.rounded-b-md {
+	border-bottom-right-radius: 0.375rem;
+	border-bottom-left-radius: 0.375rem;
+}
 .border {
 	border-width: 1px;
 }
@@ -1545,6 +1594,10 @@ select {
 .border-gray-100 {
 	--tw-border-opacity: 1;
 	border-color: rgba(243, 244, 246, var(--tw-border-opacity));
+}
+.border-gray-500 {
+	--tw-border-opacity: 1;
+	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
 }
 .border-gray-400 {
 	--tw-border-opacity: 1;
@@ -1725,6 +1778,9 @@ select {
 .pb-1 {
 	padding-bottom: 0.25rem;
 }
+.pt-0 {
+	padding-top: 0px;
+}
 .pl-4 {
 	padding-left: 1rem;
 }
@@ -1867,6 +1923,10 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(16, 185, 129, var(--tw-text-opacity));
 }
+.text-black {
+	--tw-text-opacity: 1;
+	color: rgba(0, 0, 0, var(--tw-text-opacity));
+}
 .text-gray-200 {
 	--tw-text-opacity: 1;
 	color: rgba(229, 231, 235, var(--tw-text-opacity));
@@ -1874,10 +1934,6 @@ select {
 .text-gray-300 {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
-}
-.text-black {
-	--tw-text-opacity: 1;
-	color: rgba(0, 0, 0, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
