--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1138,8 +1138,14 @@ select {
 .col-span-6 {
 	grid-column: span 6 / span 6;
 }
+.float-right {
+	float: right;
+}
 .float-left {
 	float: left;
+}
+.m-auto {
+	margin: auto;
 }
 .m-3 {
 	margin: 0.75rem;
@@ -1147,11 +1153,14 @@ select {
 .m-1 {
 	margin: 0.25rem;
 }
-.m-auto {
-	margin: auto;
-}
 .m-0 {
 	margin: 0px;
+}
+.m-2 {
+	margin: 0.5rem;
+}
+.m-20 {
+	margin: 5rem;
 }
 .mx-auto {
 	margin-left: auto;
@@ -1234,6 +1243,9 @@ select {
 .mb-4 {
 	margin-bottom: 1rem;
 }
+.mb-2 {
+	margin-bottom: 0.5rem;
+}
 .mb-5 {
 	margin-bottom: 1.25rem;
 }
@@ -1315,14 +1327,20 @@ select {
 .h-2 {
 	height: 0.5rem;
 }
-.h-1 {
-	height: 0.25rem;
+.h-24 {
+	height: 6rem;
 }
 .max-h-20 {
 	max-height: 5rem;
 }
+.max-h-4 {
+	max-height: 1rem;
+}
 .max-h-10 {
 	max-height: 2.5rem;
+}
+.max-h-28 {
+	max-height: 7rem;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1374,6 +1392,12 @@ select {
 }
 .w-1\/2 {
 	width: 50%;
+}
+.w-1\/5 {
+	width: 20%;
+}
+.w-1\/4 {
+	width: 25%;
 }
 .min-w-0 {
 	min-width: 0px;
@@ -1447,6 +1471,11 @@ select {
 .list-disc {
 	list-style-type: disc;
 }
+.appearance-none {
+	-webkit-appearance: none;
+	   -moz-appearance: none;
+	        appearance: none;
+}
 .grid-cols-6 {
 	grid-template-columns: repeat(6, minmax(0, 1fr));
 }
@@ -1503,6 +1532,21 @@ select {
 	margin-right: calc(0.25rem * var(--tw-space-x-reverse));
 	margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
+.space-x-10 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-x-reverse: 0;
+	margin-right: calc(2.5rem * var(--tw-space-x-reverse));
+	margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-y-5 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+}
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-x-reverse: 0;
+	margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+	margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
 .overflow-hidden {
 	overflow: hidden;
 }
@@ -1551,10 +1595,6 @@ select {
 	border-bottom-right-radius: 0px;
 	border-bottom-left-radius: 0px;
 }
-.rounded-b-md {
-	border-bottom-right-radius: 0.375rem;
-	border-bottom-left-radius: 0.375rem;
-}
 .border {
 	border-width: 1px;
 }
@@ -1576,6 +1616,9 @@ select {
 .border-r {
 	border-right-width: 1px;
 }
+.border-dashed {
+	border-style: dashed;
+}
 .border-gray-300 {
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
@@ -1595,9 +1638,9 @@ select {
 	--tw-border-opacity: 1;
 	border-color: rgba(243, 244, 246, var(--tw-border-opacity));
 }
-.border-gray-500 {
+.border-gray-600 {
 	--tw-border-opacity: 1;
-	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
+	border-color: rgba(75, 85, 99, var(--tw-border-opacity));
 }
 .border-gray-400 {
 	--tw-border-opacity: 1;
@@ -1659,16 +1702,35 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
 }
+.bg-blue-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
+}
+.bg-blue-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(96, 165, 250, var(--tw-bg-opacity));
+}
+.bg-red-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(248, 113, 113, var(--tw-bg-opacity));
+}
+.bg-green-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
+}
+.bg-red-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
+}
 .bg-gray-400 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
 }
-.bg-blue-200 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
-}
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
+}
+.bg-opacity-50 {
+	--tw-bg-opacity: 0.5;
 }
 .bg-cover {
 	background-size: cover;
@@ -1691,6 +1753,9 @@ select {
 }
 .p-1 {
 	padding: 0.25rem;
+}
+.p-20 {
+	padding: 5rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -1786,6 +1851,9 @@ select {
 }
 .pl-1 {
 	padding-left: 0.25rem;
+}
+.pl-2 {
+	padding-left: 0.5rem;
 }
 .pt-8 {
 	padding-top: 2rem;
@@ -2057,6 +2125,14 @@ select {
 .hover\:bg-gray-300:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+}
+.hover\:bg-blue-700:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(29, 78, 216, var(--tw-bg-opacity));
+}
+.hover\:bg-gray-200:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
 .hover\:text-gray-500:hover {
 	--tw-text-opacity: 1;
