--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1156,11 +1156,11 @@ select {
 .m-0 {
 	margin: 0px;
 }
+.m-10 {
+	margin: 2.5rem;
+}
 .m-2 {
 	margin: 0.5rem;
-}
-.m-20 {
-	margin: 5rem;
 }
 .mx-auto {
 	margin-left: auto;
@@ -1173,6 +1173,10 @@ select {
 .mx-2 {
 	margin-left: 0.5rem;
 	margin-right: 0.5rem;
+}
+.my-11 {
+	margin-top: 2.75rem;
+	margin-bottom: 2.75rem;
 }
 .ml-3 {
 	margin-left: 0.75rem;
@@ -1275,6 +1279,21 @@ select {
 }
 .-mt-px {
 	margin-top: -1px;
+}
+.-ml-5 {
+	margin-left: -1.25rem;
+}
+.-mb-6 {
+	margin-bottom: -1.5rem;
+}
+.-mr-4 {
+	margin-right: -1rem;
+}
+.mt-7 {
+	margin-top: 1.75rem;
+}
+.mr-0 {
+	margin-right: 0px;
 }
 .block {
 	display: block;
@@ -1396,8 +1415,8 @@ select {
 .w-1\/5 {
 	width: 20%;
 }
-.w-1\/4 {
-	width: 25%;
+.w-14 {
+	width: 3.5rem;
 }
 .min-w-0 {
 	min-width: 0px;
@@ -1410,6 +1429,9 @@ select {
 }
 .max-w-xl {
 	max-width: 36rem;
+}
+.max-w-3xl {
+	max-width: 48rem;
 }
 .max-w-6xl {
 	max-width: 72rem;
@@ -1438,6 +1460,10 @@ select {
 }
 .translate-y-0 {
 	--tw-translate-y: 0px;
+	transform: var(--tw-transform);
+}
+.rotate-90 {
+	--tw-rotate: 90deg;
 	transform: var(--tw-transform);
 }
 .scale-95 {
@@ -1491,6 +1517,9 @@ select {
 .flex-wrap {
 	flex-wrap: wrap;
 }
+.flex-nowrap {
+	flex-wrap: nowrap;
+}
 .items-center {
 	align-items: center;
 }
@@ -1532,6 +1561,11 @@ select {
 	margin-right: calc(0.25rem * var(--tw-space-x-reverse));
 	margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-x-reverse: 0;
+	margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+	margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
 .space-x-10 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
 	margin-right: calc(2.5rem * var(--tw-space-x-reverse));
@@ -1541,11 +1575,6 @@ select {
 	--tw-space-y-reverse: 0;
 	margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
-}
-.space-x-2 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-x-reverse: 0;
-	margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-	margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .overflow-hidden {
 	overflow: hidden;
@@ -1559,6 +1588,9 @@ select {
 .truncate {
 	overflow: hidden;
 	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+.whitespace-nowrap {
 	white-space: nowrap;
 }
 .break-all {
@@ -1706,6 +1738,10 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
 }
+.bg-red-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
+}
 .bg-blue-400 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(96, 165, 250, var(--tw-bg-opacity));
@@ -1717,10 +1753,6 @@ select {
 .bg-green-400 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
-}
-.bg-red-500 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
 }
 .bg-gray-400 {
 	--tw-bg-opacity: 1;
@@ -1753,9 +1785,6 @@ select {
 }
 .p-1 {
 	padding: 0.25rem;
-}
-.p-20 {
-	padding: 5rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -2003,6 +2032,10 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
 }
+.text-blue-400 {
+	--tw-text-opacity: 1;
+	color: rgba(96, 165, 250, var(--tw-text-opacity));
+}
 .underline {
 	text-decoration: underline;
 }
@@ -2134,6 +2167,10 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
+.hover\:bg-gray-400:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+}
 .hover\:text-gray-500:hover {
 	--tw-text-opacity: 1;
 	color: rgba(107, 114, 128, var(--tw-text-opacity));
@@ -2153,6 +2190,14 @@ select {
 .hover\:text-gray-900:hover {
 	--tw-text-opacity: 1;
 	color: rgba(17, 24, 39, var(--tw-text-opacity));
+}
+.hover\:text-blue-500:hover {
+	--tw-text-opacity: 1;
+	color: rgba(59, 130, 246, var(--tw-text-opacity));
+}
+.hover\:text-blue-300:hover {
+	--tw-text-opacity: 1;
+	color: rgba(147, 197, 253, var(--tw-text-opacity));
 }
 .focus\:z-10:focus {
 	z-index: 10;
