--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1156,11 +1156,11 @@ select {
 .m-0 {
 	margin: 0px;
 }
+.m-10 {
+	margin: 2.5rem;
+}
 .m-2 {
 	margin: 0.5rem;
-}
-.m-20 {
-	margin: 5rem;
 }
 .mx-auto {
 	margin-left: auto;
@@ -1270,11 +1270,29 @@ select {
 .mr-px {
 	margin-right: 1px;
 }
+.ml-5 {
+	margin-left: 1.25rem;
+}
+.ml-7 {
+	margin-left: 1.75rem;
+}
+.-mr-7 {
+	margin-right: -1.75rem;
+}
+.-mb-10 {
+	margin-bottom: -2.5rem;
+}
 .mb-3 {
 	margin-bottom: 0.75rem;
 }
 .-mt-px {
 	margin-top: -1px;
+}
+.mr-5 {
+	margin-right: 1.25rem;
+}
+.-ml-5 {
+	margin-left: -1.25rem;
 }
 .block {
 	display: block;
@@ -1387,17 +1405,14 @@ select {
 .w-20 {
 	width: 5rem;
 }
-.w-64 {
-	width: 16rem;
-}
 .w-1\/2 {
 	width: 50%;
 }
+.w-64 {
+	width: 16rem;
+}
 .w-1\/5 {
 	width: 20%;
-}
-.w-1\/4 {
-	width: 25%;
 }
 .min-w-0 {
 	min-width: 0px;
@@ -1410,6 +1425,9 @@ select {
 }
 .max-w-xl {
 	max-width: 36rem;
+}
+.max-w-3xl {
+	max-width: 48rem;
 }
 .max-w-6xl {
 	max-width: 72rem;
@@ -1491,6 +1509,9 @@ select {
 .flex-wrap {
 	flex-wrap: wrap;
 }
+.flex-nowrap {
+	flex-wrap: nowrap;
+}
 .items-center {
 	align-items: center;
 }
@@ -1527,25 +1548,25 @@ select {
 	margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
-.space-x-1 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-x-reverse: 0;
-	margin-right: calc(0.25rem * var(--tw-space-x-reverse));
-	margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
-}
 .space-x-10 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
 	margin-right: calc(2.5rem * var(--tw-space-x-reverse));
 	margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
-.space-y-5 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-y-reverse: 0;
-	margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+.space-x-1 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-x-reverse: 0;
+	margin-right: calc(0.25rem * var(--tw-space-x-reverse));
+	margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
 	margin-right: calc(0.5rem * var(--tw-space-x-reverse));
 	margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-y-5 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 .overflow-hidden {
 	overflow: hidden;
@@ -1559,6 +1580,9 @@ select {
 .truncate {
 	overflow: hidden;
 	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+.whitespace-nowrap {
 	white-space: nowrap;
 }
 .break-all {
@@ -1618,6 +1642,9 @@ select {
 }
 .border-dashed {
 	border-style: dashed;
+}
+.border-none {
+	border-style: none;
 }
 .border-gray-300 {
 	--tw-border-opacity: 1;
@@ -1702,9 +1729,20 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
 }
+.bg-gray-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+}
 .bg-blue-500 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
+}
+.bg-transparent {
+	background-color: transparent;
+}
+.bg-red-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
 }
 .bg-blue-400 {
 	--tw-bg-opacity: 1;
@@ -1717,14 +1755,6 @@ select {
 .bg-green-400 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
-}
-.bg-red-500 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
-}
-.bg-gray-400 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
@@ -1753,9 +1783,6 @@ select {
 }
 .p-1 {
 	padding: 0.25rem;
-}
-.p-20 {
-	padding: 5rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -2134,6 +2161,9 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
+.hover\:font-bold:hover {
+	font-weight: 700;
+}
 .hover\:text-gray-500:hover {
 	--tw-text-opacity: 1;
 	color: rgba(107, 114, 128, var(--tw-text-opacity));
@@ -2153,6 +2183,10 @@ select {
 .hover\:text-gray-900:hover {
 	--tw-text-opacity: 1;
 	color: rgba(17, 24, 39, var(--tw-text-opacity));
+}
+.hover\:text-blue-200:hover {
+	--tw-text-opacity: 1;
+	color: rgba(191, 219, 254, var(--tw-text-opacity));
 }
 .focus\:z-10:focus {
 	z-index: 10;
