--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1259,6 +1259,9 @@ select {
 .ml-auto {
 	margin-left: auto;
 }
+.mr-4 {
+	margin-right: 1rem;
+}
 .-mb-1 {
 	margin-bottom: -0.25rem;
 }
@@ -1297,9 +1300,6 @@ select {
 }
 .-ml-5 {
 	margin-left: -1.25rem;
-}
-.mr-0 {
-	margin-right: 0px;
 }
 .block {
 	display: block;
